# Coal-expert-kb

./: README.md  docker-compose.yml  pyproject.toml
.github/codex/prompts/: fix.md  review.md
.github/workflows/: codex-fix-and-automerge.yml
configs/: app.yaml  schema.yaml
configs/prompts/: metadata_extract.txt  query_parse.txt  record_extract.txt
data/eval/: eval_set.jsonl  retrieval_gold.example.jsonl  retrieval_gold.jsonl
docs/: ARCHITECTURE.md
experiments/: build_lora_dataset.py
scripts/: ask.py  build_lora_dataset.py  eval.py  eval_lora_extractor.py  eval_retrieval.py  export_records.py  extract_records.py  index.py  ingest.py  train_lora_record_extractor.py  validate_index.py
src/coal_expert_kb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/coal_kb/: cli_ui.py  logging.py  settings.py  settings.py.bak_ingestion_cfg
tests/: conftest.py  test_answerer.py  test_ask_integration.py  test_constraint_policy_relax.py  test_context_builder.py  test_elastic_optional.py  test_environment.py  test_ingest_drops_references.py  test_loader_registry.py  test_loaders_text.py  test_markdown_hierarchical_semantic.py  test_pdf_loader_markdown_fallback.py  test_pdf_markdown_quality.py  test_query_planner.py  test_registry.py  test_retrieval.py  test_retrieval_diversity.py  test_retrieval_reference_filter.py  test_sectioner_references.py  test_sentence_split_zh.py  test_settings.py  test_soft_scoring_missing_metadata.py  test_table_extractor.py  test_text_clean.py  test_two_stage_retrieval.py  test_units.py  test_validators.py
(+70 files in other folders)
