[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coal-expert-kb"
version = "0.1.0"
description = "Expert knowledge base for coal pyrolysis/gasification pollutants with RAG + structured extraction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Hualong Zeng" }]

dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "python-dotenv>=1.0.0",
  "rich>=13.7",
  "tqdm>=4.66",
  "SQLAlchemy>=2.0",
  "langchain>=0.3",
  "langchain-core>=0.3",
  "langchain-community>=0.3",
  "langchain-chroma>=0.1.2",
  "langchain-openai>=0.2",
  "langchain-huggingface>=0.1",
  "langchain-text-splitters>=0.3",
  "chromadb>=0.5",
  "pypdf>=4.0",
  "sentence-transformers>=2.6",
  "elasticsearch>=8.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
